--- a/main/pages/historico.html
+++ b/main/pages/historico.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Histórico - Sistema Acadêmico</title>
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/historico.css">
+    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/historico.css">
 </head>
 <body>
-    <!-- Menu Lateral -->
+    
     <nav class="menu-lateral">
         <ul class="menu-lateral">
-            <li><a href="index.html">Início</a></li><br>
+            <li><a href="../pages/index.php">Início</a></li><br>
             <li><a href="academico.html">Acadêmico</a></li><br>
             <li><a href="salas.html">Salas</a></li><br>
             <li><a href="arte.html">Arte</a></li><br>
@@ -19,13 +19,9 @@
             <li><a href="configuracoes.html">Configurações</a></li><br>
         </ul>
     </nav>
-
-    <!-- Conteúdo Principal da Aba Histórico -->
     <div class="inicio-container">
         <section class="historico">
             <h2>Histórico de Alterações</h2>
-
-            <!-- Linha do Tempo de Alterações -->
             <div class="linha-do-tempo" id="linha-do-tempo">
                 <div class="alteracao">
                     <span class="data">02/11/2024</span>
@@ -41,7 +37,6 @@
                 </div>
             </div>
 
-            <!-- Controle de Permissões -->
             <div class="controle-permissoes">
                 <h3>Controle de Permissões</h3>
                 <label for="nivel-acesso">Nível de Acesso:</label>
@@ -57,11 +52,11 @@
             Meu Perfil <br><br><br><br><br><br><br>
             Nome da Pessoa <br><br><br>
 
-            <a href="#pagine de login" class="log-out">Sair</a>
+            <a href="../pages/login.php" class="log-out">Sair</a>
            
         </div>
     </div>
 
-    <script src="js/historico.js"></script>
+    <script src="../js/historico.js"></script>
 </body>
 </html>
